syntax = "proto3";

import "entities/processes.proto";
import "api/core.proto";

message GetPollingManagedProcessesRequest {
  uint32 timestamp = 1;
  string process_id = 2;
}

message GetAllManagedProcessesResponse {
  repeated ManagedProcess processes = 1;
}

message GetPollingManagedProcessesResponse {
  repeated ManagedProcess data = 1;
  PollingMetaData meta = 2;
}

message GetAllOutputsResponse {
  repeated ManagedProcessOutput outputs = 1;
}

message GetPollingOutputsRequest {
  uint32 timestamp = 1;
}

message GetPollingOutputsResponse {
  repeated ManagedProcessOutput data = 1;
  PollingMetaData meta = 2;
}
